--- a/Scss/estilos.scss
+++ b/Scss/estilos.scss
@@ -4,8 +4,8 @@
         margin: 0%;
     }
     form{
-        .input_izq{
-            margin-left: .5rem;
+        #input_izq{
+            margin-right: .5rem;
         }
     }
 }
@@ -21,15 +21,70 @@
 }
 h1{
     text-align: center;
-    margin: 5%;
+    margin: 3%;
 }
-main{
-    border: 2px black solid;
-    margin: 0px 30vw; 
+main{ 
     h1{
         text-align: center;
     }
-    .info_banco{
+    .info_resultado{
+        height: 10vh;
         background-color: cadetblue;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        input{
+            height: 50%;
+            margin: 0 1%;
+        }
+    }
+    .info_opciones{
+        margin: 3% 30%;
+        border:dashed 2px black;
+        section{
+            padding: 1.5%;
+        }
+        .diasIngresados{
+           .inputDias{
+               display: flex;
+               justify-content: center;
+               align-items: center;
+               margin: 1.5% 5px;
+               #nroPlazoDias{
+                   width: 20%;
+                   margin: 0 3%;
+               }
+               .input-group{
+                   width: 50%;
+                   margin-right:5%;
+                   margin-left:3%
+               }
+           }
+        }
+    }
+    ul{
+        display: flex;
+        justify-content: center;
+        border: .15rem solid black;
+        li{
+        display: inline-flex;
+        padding: 0px .5rem;
+        
+            input{
+                font-size: 120%;
+                width: 80%;
+            appearance: none;
+            border: none;
+            background-color: transparent;
+            }
+            img{
+                width: 3.5rem;
+                height: 3.5rem;
+                margin:.5rem;
+            }
+        }
+        .datosInput {
+            display:inline-grid;
+        }
     }
 }
