--- a/Scss/estilos.scss
+++ b/Scss/estilos.scss
@@ -1,6 +1,15 @@
 $borde: 1px solid rgba(0,0,0,.2);
 .titulo{
-    position: relative;
+    h1{
+        text-align: center;
+        margin: 3%;
+        margin-bottom: 1%;
+    }
+    div{
+        display: flex;
+        justify-content: flex-end;
+        margin-bottom: 1%;
+    }
 }
 .navbar-light{
     color: white;
@@ -33,17 +42,13 @@ $borde: 1px solid rgba(0,0,0,.2);
         margin-bottom: 0%;
     }
 }
-h1{
-    text-align: center;
-    margin: 3%;
-}
 main{
     h1{
         text-align: center;
     }
     .info_resultado{
         height: 10vh;
-        background-color: cadetblue;
+        background-color: transparent;
         display: flex;
         justify-content: center;
         align-items: center;
